# ChangeLog for net-misc/zaptel
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/zaptel/Attic/ChangeLog,v 1.47 2005/06/25 08:56:54 stkn Exp $

*zaptel-1.0.8 (25 Jun 2005)

  25 Jun 2005; Stefan Knoblich <stkn@gentoo.org>
  +files/zaptel-1.0.8-gentoo.diff, +files/zaptel-bristuff-0.2.0-RC8h.patch,
  +zaptel-1.0.8.ebuild:
  Version bump.

  24 Jun 2005; Stefan Knoblich <stkn@gentoo.org> -zaptel-1.0.0.ebuild,
  -zaptel-1.0.1.ebuild, -zaptel-1.0.2.ebuild:
  Removing old zaptel ebuilds

*zaptel-1.0.4-r1 (24 Jun 2005)

  24 Jun 2005; Stefan Knoblich <stkn@gentoo.org> +zaptel-1.0.4-r1.ebuild,
  +zaptel-1.0.6-r1.ebuild:
  Backported non-root changes to zaptel-1.0.4 and 1.0.6 for asterisk security
  fix.

  24 Jun 2005; Stefan Knoblich <stkn@gentoo.org> zaptel-1.0.7-r1.ebuild:
  Renamed udev rules file to 10-zaptel.rules, making udev use our custom rules
  instead of the shipped.

  23 Jun 2005; Stefan Knoblich <stkn@gentoo.org> zaptel-1.0.7-r1.ebuild:
  ~* keywords restored for asterisk-1.0.7 security update.

  01 Jun 2005; Stefan Knoblich <stkn@gentoo.org>
  -files/zaptel-bristuff-0.2.0-RC8d.patch,
  +files/zaptel-bristuff-0.2.0-RC8g.patch, zaptel-1.0.7-r1.ebuild:
  Bristuff updated to 0.2.0-RC8g.

  12 May 2005; Stefan Knoblich <stkn@gentoo.org>
  -files/zaptel-bristuff-0.2.0-RC8c.patch,
  +files/zaptel-bristuff-0.2.0-RC8d.patch, zaptel-1.0.7-r1.ebuild:
  Bristuff update and moved pkg_config permission bits to pkg_postinst.

  11 May 2005; Stefan Knoblich <stkn@gentoo.org> files/zaptel.devfsd,
  files/zaptel.rc6:
  Fixed init script and devfs.d file for 1.0.7-r1.

  10 May 2005; Stefan Knoblich <stkn@gentoo.org>
  -files/zaptel-bristuff-0.2.0-RC8a.patch,
  +files/zaptel-bristuff-0.2.0-RC8c.patch, zaptel-1.0.7-r1.ebuild:
  Updated bristuff to latest version, minor changes.

*zaptel-1.0.7-r1 (07 May 2005)

  07 May 2005; Stefan Knoblich <stkn@gentoo.org>