@@ -1,13 +1,13 @@
-MD5 05d90593a79bdd69cdc1692cadcf4655 zaptel-1.0.7-r1.ebuild 6497
-MD5 71856b10539385021904f71c2eb532f7 zaptel-1.0.4-r1.ebuild 4433
-MD5 b121042253d6e684330d0990b8f667c2 zaptel-1.0.6-r1.ebuild 6220
-MD5 ceeb5fcf63c6539d0bbbe196ee79952e zaptel-1.0.7.ebuild 6096
+MD5 933d07110e4ec56a471ea8dd40140619 zaptel-1.0.7-r1.ebuild 6501
+MD5 f3a4df254ba1f5fc878aa89423274860 zaptel-1.0.4-r1.ebuild 4437
+MD5 bc1198088b0a128fae00180269e2f036 zaptel-1.0.6-r1.ebuild 6224
+MD5 373dbadbb20d7eb4fd7d4001f47d7015 zaptel-1.0.7.ebuild 6096
 MD5 7245a92de844119cd4351807007616f0 zaptel-1.0.3.ebuild 3532
-MD5 89874e5cbdf7262fe23db47cdb5a538e zaptel-1.0.4.ebuild 4473
+MD5 e1b7a4d3a6b6529f0b3308a9e83ebb04 zaptel-1.0.4.ebuild 4477
 MD5 44cf247f04cc83413fcb40ed59d0847a metadata.xml 248
-MD5 aa21dcc11a54be5c2305d6a00a1efdcd ChangeLog 8382
+MD5 0d2352e42ffb6ac5d0043481f3a4df8e ChangeLog 8588
 MD5 bda08bc5f2488088cac8289b814f3e70 zaptel-1.0.8.ebuild 6327
-MD5 7316ffa750860754390bfe11d3d23d09 zaptel-1.0.6.ebuild 6265
+MD5 f9d339edf9e5ce34fadcd0a6c0dfa762 zaptel-1.0.6.ebuild 6265
 MD5 8d66c378ea6b3b3f7bb2ee1fd2b6e51c zaptel-0.9.1.ebuild 3526
 MD5 0c81001d4c9efeeffeb1332580fb4cdc files/digest-zaptel-1.0.6-r1 212
 MD5 296ec9da581d5768ca13840b1a32c33f files/digest-zaptel-1.0.7 212
