@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/zaptel/Attic/zaptel-1.0.6.ebuild,v 1.6 2005/05/05 15:53:56 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/zaptel/Attic/zaptel-1.0.6.ebuild,v 1.7 2005/06/25 13:26:54 stkn Exp $
 
 IUSE="devfs26 bri florz"
 
@@ -11,7 +11,7 @@ FLORZ_VERSION="0.2.0-RC7j_florz-4"
 
 DESCRIPTION="Drivers for Digium and ZapataTelephony cards"
 HOMEPAGE="http://www.asterisk.org"
-SRC_URI="ftp://ftp.asterisk.org/pub/telephony/zaptel/zaptel-${PV}.tar.gz
+SRC_URI="ftp://ftp.asterisk.org/pub/telephony/zaptel/old/zaptel-${PV}.tar.gz
 	 bri? ( http://www.junghanns.net/asterisk/downloads/bristuff-${BRI_VERSION}.tar.gz )
 	 florz? ( http://zaphfc.florz.dyndns.org/zaphfc_${FLORZ_VERSION}.diff.gz )"
 
