@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/zaptel
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/zaptel/Attic/ChangeLog,v 1.47 2005/06/25 08:56:54 stkn Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/zaptel/Attic/ChangeLog,v 1.48 2005/06/25 13:26:54 stkn Exp $
+
+  25 Jun 2005; Stefan Knoblich <stkn@gentoo.org> zaptel-1.0.4-r1.ebuild,
+  zaptel-1.0.4.ebuild, zaptel-1.0.6-r1.ebuild, zaptel-1.0.6.ebuild,
+  zaptel-1.0.7-r1.ebuild, zaptel-1.0.7.ebuild:
+  Fixed SRC_URI.
 
 *zaptel-1.0.8 (25 Jun 2005)
 
